test/units/TypingSpec/valid/prog/abs-reorder-2.algst
const_int : Int -> ∀(a:TU). a -> Int
const_int = \[_:TU] i _ -> i
