test/units/TypingSpec/invalid/types/unbound-progvar.algst
-- `a` can only appear in type context.
\[a:TU] -> negate a
